// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pointerMotion walks the pointer from one sample to the next 1`] = `
{
  "endMs": 1000,
  "startMs": 0,
  "x": "477+960*clip((t-0.000)/1.000,0,1)",
  "y": "537",
}
`;

exports[`pointerSvg draws the arrow 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="1920" height="1080" viewBox="0 0 1920 1080">
  <g transform="translate(3,3) scale(0.06637)">
  <path d="M0,0 L0,750 L207,573 L343,895 L472,840 L343,530 L600,530 Z" fill="#000000" fill-opacity="0.45" stroke="#000000" stroke-opacity="0.45" stroke-width="100" stroke-linejoin="round" stroke-linecap="round"/>
  <path d="M0,0 L0,750 L207,573 L343,895 L472,840 L343,530 L600,530 Z" fill="#ffffff" stroke-linejoin="round" stroke-linecap="round"/>
  </g>
</svg>"
`;

exports[`pointerSvg draws the hand 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="1920" height="1080" viewBox="0 0 1920 1080">
  <g transform="translate(4,4) scale(0.09692)">
  <path d="M230,0 C189,0 156,33 156,74 L156,455 L128,428 C99,400 53,401 25,430 C5,459 6,505 26,533 L196,700 C247,750 316,778 388,778 L432,778 C509,778 570,717 570,640 L570,430 C570,395 542,367 507,367 C497,367 488,369 479,373 C474,341 447,317 414,317 C403,317 393,319 384,323 C378,292 350,269 318,269 C314,269 309,269 305,270 L305,74 C305,33 271,0 230,0 Z" fill="#000000" fill-opacity="0.45" stroke="#000000" stroke-opacity="0.45" stroke-width="90" stroke-linejoin="round" stroke-linecap="round"/>
  <path d="M230,0 C189,0 156,33 156,74 L156,455 L128,428 C99,400 53,401 25,430 C5,459 6,505 26,533 L196,700 C247,750 316,778 388,778 L432,778 C509,778 570,717 570,640 L570,430 C570,395 542,367 507,367 C497,367 488,369 479,373 C474,341 447,317 414,317 C403,317 393,319 384,323 C378,292 350,269 318,269 C314,269 309,269 305,270 L305,74 C305,33 271,0 230,0 Z" fill="#ffffff" stroke-linejoin="round" stroke-linecap="round"/>
  </g>
</svg>"
`;

exports[`pointerSvg draws the ring 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="1920" height="1080" viewBox="0 0 1920 1080">
  <g transform="translate(4,4) scale(0.12150)">
  <path d="M200,50 A150,150 0 1,0 200,350 A150,150 0 1,0 200,50 Z M200,105 A95,95 0 1,1 200,295 A95,95 0 1,1 200,105 Z" fill-rule="evenodd" fill="#000000" fill-opacity="0.45" stroke="#000000" stroke-opacity="0.45" stroke-width="60" stroke-linejoin="round" stroke-linecap="round"/>
  <path d="M200,50 A150,150 0 1,0 200,350 A150,150 0 1,0 200,50 Z M200,105 A95,95 0 1,1 200,295 A95,95 0 1,1 200,105 Z" fill-rule="evenodd" fill="#ffffff" stroke-linejoin="round" stroke-linecap="round"/>
  </g>
</svg>"
`;
